<resources>
    <string name="app_name">豫便利B2B</string>

    <string name="permission_ok">确定</string>
    <string name="permission_close">关闭</string>
    <string name="permission_cancel">取消</string>
    <string name="permission_setting">设置</string>
    <string name="network_err">网络连接错误...</string>
    <string name="refresh_release_text">松开后立即刷新</string>
    <string name="refreshing">正在刷新...</string>

    <string name="refresh_down_text">下拉可刷新</string>
    <string name="symbol_rmb">¥</string>

    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="filter_vcode">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>

    <string name="account_pay">余额支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="wx_pay">微信支付</string>
    <string name="online_bank_pay">网银支付</string>
    <string name="cash_delivery_pay">货到付款</string>
    <string name="credit_payment">授信支付</string>

    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>

    <!--客服电话-->
    <string name="customer_service_number">400-667-5666</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>

    <!--登录时间超长时的提醒-->
    <string name="need_login_again">您登录时间已超时，请重新登录</string>
    <!-- 混合验证声纹注册页面 -->
    <string name="vocal_register_txt_title">声纹注册</string>
    <string name="vocal_register_press_hint">请按住麦克风说话</string>
    <string name="vocal_register_listening_hint">倾听中，读完后请松开</string>
    <string name="vocal_register_mismatch_hint">您读的数字不一致，请重读</string>
    <string name="vocal_register_failure_hint">声纹注册失败，请点击话筒重试</string>
    <string name="vocal_register_download_fail_hint">声纹密码获取失败：</string>
    <string name="vocal_register_engine_error_hint">声纹引擎错误</string>
    <string name="vocal_register_success_hint">声纹注册成功</string>
    <string name="vocal_register_model_existed">声纹模型已存在，请用新用户名注册</string>
    <string name="vocal_register_error_hint">声纹注册出错：</string>
    <!-- 混合验证登录页面 -->
    <string name="login_txt_title">人脸声纹登录</string>
    <string name="login_operation_hint">请对准面部，读出下方数字</string>
    <string name="login_hint_rechallenge">点击快门，重新开始验证</string>
    <string name="login_failure_hint">混合验证失败</string>
    <string name="login_success_hint">混合验证成功</string>
    <string name="login_hint_verifying">正在验证中，请稍候再试</string>
    <string name="login_hint_engine_error">声纹验证失败：声纹引擎错误</string>
    <string name="login_hint_read_different">声纹验证失败：您所读的数字不一致</string>
    <string name="login_hint_interrupted">检测到操作被打断，请重试</string>
    <!-- 公用字段值 -->
    <string name="hint_flash_not_support">当前镜头不支持闪光灯</string>
    <string name="hint_change_not_support">不支持镜头切换</string>
    <string name="hint_flash_opened">闪光灯已开启</string>
    <string name="hint_flash_closed">闪光灯已关闭</string>
    <string name="hint_read_pwd_below">请读出下方数字：</string>
    <string name="hint_empty_uname">请输入用户名</string>
    <!-- MFVDemo主页面 -->
    <string name="title_demo">讯飞身份验证示例</string>
    <string name="title_face_demo">人脸验证示例</string>
    <string name="title_vocal_demo">声纹注册</string>
    <string name="title_mixed_demo">融合验证示例</string>
    <string name="introduction_demo">身份验证平台基于多种生物特征，现阶段可支持人脸、声纹和融合（人脸+声纹）三种验证方式。示例中有详尽的代码注释，以帮助开发者快速集成SDK。</string>
    <string name="tip_auth_id">用户名也即auth_id，是用户的唯一标识，用于关联第三方账号体系。\nauth_id长度为6&#8211;18个字符，由英文字母、数字或下划线组成，不能以数字开头。</string>
    <!-- MFVDemo主页面鉴别相关 -->
    <string name="txt_idf_speech">声纹鉴别</string>
    <string name="txt_idf_face">人脸鉴别</string>
    <string name="groupid_err">组ID输入有误</string>
    <string name="groupid_null">组ID不能为空</string>
    <string name="title_face_idf">人脸鉴别示例</string>
    <string name="title_vocal_idf">声纹鉴别示例</string>
</resources>
