<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.runtai.newdexintong.module.myorder.activity.ConfirmPayActivity">

    <include layout="@layout/title_model" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_pay_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/pay_page_icon" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_pay_icon">

            <TextView
                android:id="@+id/tv_money_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="订单金额：￥"
                android:textColor="@color/new_title_color"
                android:textSize="@dimen/font_16" />


            <TextView
                android:id="@+id/tv_money_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_money_icon"
                android:text="756.00"
                android:textColor="@color/new_title_color"
                android:textSize="@dimen/font_16" />

        

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/entry_backgroud_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="选择支付方式"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/font_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_backgroud_color" />

    <RelativeLayout
        android:id="@+id/rl_account_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/iv_account"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:src="@mipmap/account_pay_icon" />

        <TextView
            android:id="@+id/tv_account_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_account"
            android:text="@string/account_pay"
            android:textSize="@dimen/font_16" />

        <RadioButton
            android:id="@+id/radioBtn_account_pay"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/radiobutton_style"
            android:button="@null"
            android:checked="true"
            android:clickable="false" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_backgroud_color" />


    <RelativeLayout
        android:id="@+id/rl_delivery_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:src="@mipmap/online_bank_pay_icon" />

        <TextView
            android:id="@+id/tv_delivery_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/img2"
            android:text="@string/cash_delivery_pay"
            android:textSize="@dimen/font_16" />

        <RadioButton
            android:id="@+id/radioBtn_delivery_pay"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/radiobutton_style"
            android:button="@null"
            android:checked="false"
            android:clickable="false" />
    </RelativeLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_backgroud_color" />

    <RelativeLayout
        android:id="@+id/rl_credit_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:src="@mipmap/cash_delivery_icon" />

        <TextView
            android:id="@+id/tv_credit_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/img1"
            android:text="@string/credit_payment"
            android:textSize="@dimen/font_16" />

        <RadioButton
            android:id="@+id/radioBtn_credit_payment"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/radiobutton_style"
            android:button="@null"
            android:checked="false"
            android:clickable="false" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/entry_backgroud_color">

        <Button
            android:id="@+id/btn_confirm_pay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/button_left_margin"
            android:layout_marginRight="@dimen/button_right_margin"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape_button_red_color_bg"
            android:text="确认支付"
            android:textColor="@color/white"
            android:textSize="@dimen/button_textSize" />
    </LinearLayout>

</LinearLayout>
